# worktree-setup

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  flake.nix  package.json  taplo.toml  tsconfig.json
.github/prompts/: determinism-checker.md
.github/workflows/: auto-upgrade-dependencies.yml  build-and-test.yml  claude-code-review.yml  claude-denied.yml  claude-issue.yml  claude-pr.yml  determinism-checker.yml  readme-checker.yml  rustdoc-checker.yml  security-checker.yml  unit-tests-checker.yml
src/: cli.ts  config-loader.ts  git.ts  index.ts  interactive.ts  operations.ts  types.ts
