[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Braden Steffaniak"]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/BSteffaniak/worktree-setup"
version = "0.2.0"

[workspace.dependencies]
# Internal packages
worktree_setup_cli = { version = "0.2.0", path = "packages/cli", default-features = false }
worktree_setup_config = { version = "0.2.0", path = "packages/config", default-features = false }
worktree_setup_copy = { version = "0.2.0", path = "packages/copy", default-features = false }
worktree_setup_git = { version = "0.2.0", path = "packages/git", default-features = false }
worktree_setup_operations = { version = "0.2.0", path = "packages/operations", default-features = false }

# Git
git2 = { version = "0.20.4", default-features = false }

# CLI
clap = { version = "4.5.57", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
  "error-context",
] }
dialoguer = { version = "0.12.0", default-features = false }
indicatif = { version = "0.18.3", default-features = false }
colored = { version = "3.1.1", default-features = false }

# Serialization
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
  "std",
] }
toml = { version = "0.9.12", default-features = false, features = ["parse"] }

# Error handling
thiserror = { version = "2.0.18", default-features = false }

# File operations
glob = { version = "0.3.3", default-features = false }
jwalk = { version = "0.8.1", default-features = false }
path-clean = { version = "1.0.1", default-features = false }
rayon = { version = "1.11.0", default-features = false }
reflink-copy = { version = "0.1.28", default-features = false }

# Logging
log = { version = "0.4.29", default-features = false }
pretty_env_logger = { version = "0.5.0", default-features = false }

# Testing
tempfile = { version = "3.25.0", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
